k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finca-service
spec:
  selector:
    app: mifinca-app
  ports:
  - protocol:  TCP
    port: 80
    targetPort: 9091
  type: ClusterIP
