k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finca-ingress
  namespace: finca
spec: 
  rules:
  - host: finca.javeriana.co
    http:
      paths:
      - path: "/api/v1"
        pathType: Prefix
        backend:
          service:
            name: finca-service
            port:
              number: 80
